--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,15 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+
+- task: SonarCloudPrepare@3
+  inputs:
+    SonarCloud: 'SonarCloud1'
+    organization: 'irad0511'
+    scannerMode: 'MSBuild'
+    projectKey: 's540451423'
+    projectName: 's540451423'
+    
+- script: ./gradlew build
+  displayName: 'GradleBuild1'
+
