Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
 
 - task: SonarCloudPrepare@3
   inputs:
-    SonarCloud: 'SonarCloud1'
+    SonarCloud: 'SonarCubeCloud'
     organization: 'irad0511'
     scannerMode: 'MSBuild'
     projectKey: 's540451423'
